Getting inital plots of constant R and G contours working

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vscode"]
 	path = .vscode
 	url = https://github.com/Gloamglozer/.vscode.git
+[submodule "smithplot"]
+	path = smithplot
+	url = https://github.com/vMeijin/pySmithPlot.git
